# digital-evolution-lab

./: .gitignore  README.md  main.py  pyproject.toml
backend/algorithms/: genetic_algorithm.py
backend/core/: individual.py  population.py
backend/experiments/: exp_001_function_optimization.py  exp_001_one_max.py  exp_001_one_max_viz.py
backend/viz/: plotting.py
dashboard/: app.py
frontend/: package.json
frontend/evo-visualizer/: index.html  package-lock.json  package.json
frontend/evo-visualizer/src/: main.ts
