[project]
name = "digital-evolution-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
