[project]
name = "digital-evolution-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "streamlit>=1.56.0",
    "uvicorn>=0.41.0",
]

[tool.setuptools.packages.find]
where = ["./backend"]
include = ["*"]
exclude = []

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
